@@ -8,6 +8,7 @@
 	* doc-tools/dbadd.c: added to repository
 	* doc-tools/build-help-index.in: cleaned up html file stripping, use
 	  perl module File::Basename to make relative path to html dirs
+	* gnucash-docs.spec.in: added omf stuff
 	
 2002-12-09  Chris Lyttle  <chris@wilddev.net>
 
